@@ -1,5 +1,8 @@
 ViTables ChangeLog
 ==================
+** November 23, 2009 **
+Plugin export_csv.py enhanced: better code, reduced memory footprint.
+
 ** November 22, 2009 **
 Memory footprint greatly reduced.
 
